--- a/app/src/main/res/layout/activity_pick_up_overview.xml
+++ b/app/src/main/res/layout/activity_pick_up_overview.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pick up Details"
+        android:fontFamily="@font/medium"
+        android:textSize="35sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,13 +25,23 @@
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="311dp"
-        android:layout_height="309dp"
+        android:layout_height="344dp"
         android:background="@drawable/container"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pickup_overview">
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/medium"
+            android:text="Status"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/building"
