--- a/app/src/main/res/layout/activity_request_history.xml
+++ b/app/src/main/res/layout/activity_request_history.xml
@@ -6,26 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".requestHistory">
 
-    <Button
-        android:id="@+id/exit"
+    <ImageView
+        android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="exit"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021" />
+        app:layout_constraintVertical_bias="0.014"
+        app:srcCompat="@drawable/arrow" />
 
     <TextView
         android:id="@+id/requesthistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request History"
+        android:textSize="35sp"
+        android:fontFamily="@font/medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.089" />
+
+    <ListView
+        android:id="@+id/ListView"
+        android:layout_width="wrap_content"
+        android:layout_height="522dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/requesthistory" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
