--- a/app/src/main/res/layout/activity_security_overview.xml
+++ b/app/src/main/res/layout/activity_security_overview.xml
@@ -4,40 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".SecurityOverview">
 
     <Button
         android:id="@+id/securityRequests"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="257dp"
+        android:layout_height="50dp"
+        android:background="@drawable/homebuttons"
+        android:fontFamily="@font/medium"
         android:text="Requests"
+        android:textAllCaps="false"
+        android:textColor="#FFFF"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.674" />
+        app:layout_constraintVertical_bias="0.774" />
 
     <Button
         android:id="@+id/requestHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="257dp"
+        android:layout_height="50dp"
+        android:background="@drawable/homebuttons"
+        android:fontFamily="@font/medium"
         android:text="Request History"
+        android:textAllCaps="false"
+        android:textColor="#FFFF"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/securityRequests"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.211" />
 
     <TextView
         android:id="@+id/overview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Overview"
+        android:layout_width="241dp"
+        android:layout_height="85dp"
+        android:fontFamily="@font/bold"
+        android:textColor="#FFFF"
+        android:text="@string/welcome"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/securityRequests"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintVertical_bias="0.096" />
+
+    <TextView
+        android:id="@+id/forSec"
+        android:layout_width="121dp"
+        android:layout_height="25dp"
+        android:fontFamily="@font/seguisbi"
+        android:text="for Security"
+        android:textColor="#FFFF"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.162" />
 </androidx.constraintlayout.widget.ConstraintLayout>
