--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="Burgundy">#8D0005</color>
     <color name="slightBlack">#383435</color>
     <color name="pink">#F2E3E3</color>
+    <color name="darkBrown">#39171E</color>
 </resources>
